Fixed Name Badge Align

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -66,26 +66,34 @@ $name-badge-height: 6rem;
     padding: 0em 10em;
     background-color: white;
     border-radius: 2em;
-    min-width: 0px;
+    min-width: 30vw;
     box-sizing: border-box;
     display: flex;
     flex-direction: row;
+    // justify-content: center;
     align-items: center;
 
     transition: min-width 0.3s, all 1s;
     p {
       padding: 0;
       margin: 0;
+      min-width: 100%;
+      text-align: center;
       font-family: 'Raleway', sans-serif;
       font-weight: 300;
       font-size: 2.5rem;
+      transition: all 1s;
     }
   }
   &.full{
     .name-badge{
+      // justify-content: left;
       min-width: 100%;
       padding: 0em 1em;
       border-radius: 0;
+      p {
+        min-width: 0;
+      }
     }
   }
 }
